# ambient-ai

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
context/: README.md  sample-hot.json  sample-recent.md
context/learning/: preferences.md
docs/: architecture.md  hermes-boundary.md  model-video-scenario.md
prompts/: agent_work_contract.md  hermes_cron.md.tmpl  hermes_handoff.md.tmpl
scripts/: render-hermes-cron.sh  render-hermes-handoff.sh
skills/hermes-ambient-ai/: SKILL.md
src/ambient_ai/: __init__.py  cli.py  collectors.py  daemon.py  events.py  mcp_server.py  outcomes.py  paths.py  redaction.py  reducers.py  renderer.py
tests/: conftest.py  smoke.py  test_collectors.py  test_daemon.py  test_events.py  test_fingerprint.py  test_mcp_server.py  test_outcomes.py  test_paths.py  test_redaction.py  test_reducer_diff.py  test_reducers.py
