[project]
name = "ambient-ai"
version = "0.1.0"
description = "Ambient AI context substrate and external agent handoff MVP."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
ambient-ai = "ambient_ai.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["pytest>=8"]
# The capture core is zero-dependency; the MCP server is opt-in so Ambient can
# speak Model Context Protocol to any MCP-capable agent runtime.
mcp = ["mcp>=1.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
